--- a/joinplayer.html
+++ b/joinplayer.html
@@ -1,135 +1,160 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>JoinedPlayers</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="CSS/menu.css" />
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>JoinedPlayers</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy"
+    crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
+<link rel="stylesheet" type="text/css" href="CSS/menu.css" />
 </head>
 <style>
-    body{
-        background-color: #8094E5;
-    }
+body {
+    background-color: #8094E5;
+}
 </style>
+
 <body style="overflow:hidden">
-    <!-- navbar at the top left -->
-    <nav role="navigation">
-            <div id="menuToggle">
-                <!--
-                A fake / hidden checkbox is used as click reciever,
-                so you can use the :checked selector on it.
-                -->
-                <input type="checkbox"/>
-                <span></span>
-                <span></span>
-                <span></span>
-                
-                <ul id="menu">
-                    <a href="#"><li>Leaderboard</li></a>
-                    <a href="#"><li>Join a Team</li></a>
-                    <a href="#"><li>Settings</li></a>
-                    <a href="#" role="button" data-toggle="modal" data-target="#rulesAbout"><li>Help</li></a>
-                    <a href="index.html"><li>Logout</li></a>
-                </ul>
-        </div>
-    </nav>
-                        <button type="button" class="hej btn btn-danger mx-auto d-block float-right pull-right">Quit Game</button>
-						
+<!-- navbar at the top left -->
+<nav role="navigation">
+    <div id="menuToggle">
+        <!--
+            A fake / hidden checkbox is used as click reciever,
+            so you can use the :checked selector on it.
+            -->
+        <input type="checkbox" />
+        <span></span>
+        <span></span>
+        <span></span>
+
+        <ul id="menu">
+            <a href="#">
+                <li>Leaderboard</li>
+            </a>
+            <a href="#">
+                <li>Join a Team</li>
+            </a>
+            <a href="#">
+                <li>Settings</li>
+            </a>
+            <a href="#" role="button" data-toggle="modal" data-target="#rulesAbout">
+                <li>Help</li>
+            </a>
+            <a href="index.html">
+                <li>Logout</li>
+            </a>
+        </ul>
+    </div>
+</nav>
+<button type="button" class="hej btn btn-danger mx-auto d-block float-right pull-right">Quit Game</button>
+
 
 <section class="d-flex align-items-center" style="height: 100vh;">
 
-    <div class="container-fluid" >
-        <div class="col-sm-4 col-xs-12 mx-auto d-block">
-            <p class="text-center text-white">Share this code to join the team</p>
-            <h3 id="myInput" class="border text-center rounded" onClick="myFunction()">1552142205</h3>
-        </div><br>
+  <div class="container-fluid">
+      <div class="col-sm-4 col-xs-12 mx-auto d-block">
+          <p class="text-center text-white">Share this code to join the team</p>
+          <h3 id="myInput" class="border text-center rounded" onClick="myFunction()">1552142205</h3>
+      </div>
+      <br>
 
-        <ul class="nav nav-tabs" role="tablist">
-            <li class="nav-item">
-                <a class="nav-link active" data-toggle="tab" href="#players" role="tab">Joined players</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" data-toggle="tab" href="#request" role="tab">Requests</a>
-            </li>
-            <li class="nav-item">
-                    <a class="nav-link" data-toggle="tab" href="#request" role="tab">Invite a team</a>
-            </li>
-        </ul>
-        <div class="tab-content">
-                <div class="tab-pane fade show active" id="players" role="tabpanel">
-                    <div>
-                            <ul id ="yourteam" class="list-group" style="min-height: 40vh; overflow: scroll; overflow-x: hidden;">
-                                <li class="list-group-item"><i class="fa fa-user"></i> Player 1</li>
-                                <li class="list-group-item"><i class="fa fa-user"></i> Player 2</li>
-                                <li class="list-group-item"><i class="fa fa-user"></i> Player 3</li>
-                                <li class="list-group-item"><i class="fa fa-user"></i> Player 4</li>
-                                <li class="list-group-item"><i class="fa fa-user"></i> Player 5</li>
-                            </ul>
-                        </div><br>
-                        <button type="button" class="btn btn-success1 mx-auto d-block">Search Opponent</button>
-                </div>
-                <div class="tab-pane fade" id="request" role="tabpanel">
-                        <div>
-                                <ul id ="yourteam" class="list-group" style="min-height: 40vh; overflow: scroll; overflow-x: hidden;">
-                                    <li class="list-group-item d-flex justify-content-between align-items-center">Team 1
-                                        <span class="badge badge-primary badge-pill">4</span>
-                                        <div>
-                                            <i class="fas fa-lg fa-check mr-2"></i>
-                                            <i class="fas  fa-lg fa-times"></i>
-                                        </div>
-                                    </li>
-                                    <li class="list-group-item d-flex justify-content-between align-items-center">Team 1
-                                            <span class="badge badge-primary badge-pill">3</span>
-                                            <div>
-                                                <i class="fas fa-lg fa-check mr-2"></i>
-                                                <i class="fas  fa-lg fa-times"></i>
-                                            </div>
-                                    </li>
-                                    <li class="list-group-item d-flex justify-content-between align-items-center">Team 1
-                                            <span class="badge badge-primary badge-pill">2</span>
-                                            <div>
-                                                <i class="fas fa-lg fa-check mr-2"></i>
-                                                <i class="fas  fa-lg fa-times"></i>
-                                            </div>
-                                    </li>
-                                    <li class="list-group-item d-flex justify-content-between align-items-center">Team 1
-                                            <span class="badge badge-primary badge-pill">4</span>
-                                            <div>
-                                                <i class="fas fa-lg fa-check mr-2"></i>
-                                                <i class="fas  fa-lg fa-times"></i>
-                                            </div>
-                                    </li>
-                                    <li class="list-group-item d-flex justify-content-between align-items-center">Team 1
-                                            <span class="badge badge-primary badge-pill">4</span>
-                                            <div>
-                                                <i class="fas fa-lg fa-check mr-2"></i>
-                                                <i class="fas  fa-lg fa-times"></i>
-                                            </div>
-                                    </li>
-                                </ul>
-                            </div><br>
-                            <button type="button" class="btn btn-primary mx-auto d-block">Search Opponent</button>
-                    </div>
-        </div>                
-    </div>    
+      <ul class="nav nav-tabs" role="tablist">
+          <li class="nav-item">
+              <a class="nav-link active" data-toggle="tab" href="#players" role="tab">Joined players</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" data-toggle="tab" href="#request" role="tab">Requests</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" data-toggle="tab" href="#request" role="tab">Invite a team</a>
+          </li>
+      </ul>
+      <div class="tab-content">
+          <div class="tab-pane fade show active" id="players" role="tabpanel">
+              <div>
+                  <ul id="yourteam" class="list-group" style="min-height: 40vh; overflow: scroll; overflow-x: hidden;">
+                      <li class="list-group-item">
+                          <i class="fa fa-user"></i> Player 1</li>
+                      <li class="list-group-item">
+                          <i class="fa fa-user"></i> Player 2</li>
+                      <li class="list-group-item">
+                          <i class="fa fa-user"></i> Player 3</li>
+                      <li class="list-group-item">
+                          <i class="fa fa-user"></i> Player 4</li>
+                      <li class="list-group-item">
+                          <i class="fa fa-user"></i> Player 5</li>
+                  </ul>
+              </div>
+              <br>
+              <button type="button" class="btn btn-success1 mx-auto d-block">Search Opponent</button>
+          </div>
+          <div class="tab-pane fade" id="request" role="tabpanel">
+              <div>
+                  <ul id="yourteam" class="list-group" style="min-height: 40vh; overflow: scroll; overflow-x: hidden;">
+                      <li class="list-group-item d-flex justify-content-between align-items-center">Team 1
+                          <span class="badge badge-primary badge-pill">4</span>
+                          <div>
+                              <i class="fas fa-lg fa-check mr-2 green"></i>
+                              <i class="fas  fa-lg fa-times red"></i>
+                          </div>
+                      </li>
+                      <li class="list-group-item d-flex justify-content-between align-items-center">Team 1
+                          <span class="badge badge-primary badge-pill">3</span>
+                          <div>
+                              <i class="fas fa-lg fa-check mr-2 green"></i>
+                              <i class="fas  fa-lg fa-times red"></i>
+                          </div>
+                      </li>
+                      <li class="list-group-item d-flex justify-content-between align-items-center">Team 1
+                          <span class="badge badge-primary badge-pill">2</span>
+                          <div>
+                              <i class="fas fa-lg fa-check mr-2 green"></i>
+                              <i class="fas  fa-lg fa-times red"></i>
+                          </div>
+                      </li>
+                      <li class="list-group-item d-flex justify-content-between align-items-center">Team 1
+                          <span class="badge badge-primary badge-pill">4</span>
+                          <div>
+                              <i class="fas fa-lg fa-check mr-2 green"></i>
+                              <i class="fas  fa-lg fa-times red"></i>
+                          </div>
+                      </li>
+                      <li class="list-group-item d-flex justify-content-between align-items-center">Team 1
+                          <span class="badge badge-primary badge-pill">4</span>
+                          <div>
+                              <i class="fas fa-lg fa-check mr-2 green"></i>
+                              <i class="fas  fa-lg fa-times red"></i>
+                          </div>
+                      </li>
+                  </ul>
+              </div>
+              <br>
+              <button type="button" class="btn btn-primary mx-auto d-block">Search Opponent</button>
+          </div>
+      </div>
+  </div>
 </section>
 
-<script src="JS/script.js"></script>    
+<script src="JS/script.js"></script>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
-    <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
-    <script>
-function myFunction() {
-  var copyText = document.getElementById("myInput");
-  copyText.select();
-  document.execCommand("Copy");
-  alert("Copied the text: " + copyText.value);
-}
-    </script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
+    crossorigin="anonymous"></script>
+<script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
+<script>
+    function myFunction() {
+        var copyText = document.getElementById("myInput");
+        copyText.select();
+        document.execCommand("Copy");
+        alert("Copied the text: " + copyText.value);
+    }
+</script>
 </body>
+
 </html>
