--- a/startpage.html
+++ b/startpage.html
@@ -57,11 +57,18 @@
         <div class="row">
             <div class="col-lg-12">
                 <h2 class="text-center mb-3 mt-5">The Amazing Game</h2>
-                <div class="input-group">
-                    <input type="text" class="col-lg-4 offset-lg-4 form-control" placeholder="Create team">
-                    <div class="input-group-append">
-                        <button class="btn btn-success1" type="button">Create</button>
+
+                  <form>
+                    <div class="form-group">
+                      <div class="input-group">
+                      <input type="text" class="col-lg-4 offset-lg-4 form-control" id="teamName" placeholder="Create team">
+                        <div class="input-group-append">
+                          <button class="btn btn-success1" id="myBtn" type="submit">Create</button>
+                      </div>
                     </div>
+                  </div>
+                  </form>
+                  <div class="text-center mb-1" id="emptyField"></div><br>
                 </div>
                 <br>
                 <button class="btn btn-success1 mx-auto d-block mb-5" type="button">Join Team</button>
@@ -93,6 +100,7 @@
     </div>
 <script src="JS/codeGenerator.js"></script>
 <script src="JS/script.js"></script> 
+<script src="JS/createTeam.js"></script> 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
