--- a/leaderboard.html
+++ b/leaderboard.html
@@ -27,7 +27,7 @@
                 <a href="#">
                     <li>Leaderboard</li>
                 </a>
-                <a href="joinplayer.html">
+                <a href="#">
                     <li>Join a Team</li>
                 </a>
                 <a href="#">
@@ -42,15 +42,14 @@
             </ul>
         </div>
     </nav>
+    <button type="button" class="btn btn-danger mx-auto d-block float-right pull-right"><a href="startpage.html">Quit Game</a></button>
 
 
     <section class="d-flex align-items-center" style="height: 100vh;">
 
       <div class="container-fluid">
-	  <div class="player">
         <span class="fa fa-2x fa-user"></span>
-        <h4 class="text-white">Player 1</h4>
-		</div>
+        <h4>Player 1</h4>
         <hr>
         <ul class="nav nav-pills nav-fill">
           <li class="nav-item"><a class="nav-link active" href="#score" data-toggle="tab">Score</a></li>
@@ -65,7 +64,7 @@
           <div class="tab-content">
               <div class="tab-pane fade show active" id="score" role="tabpanel">
                   <div>
-                      <ul id="score" class="list-group" style="min-height: 40vh; overflow-y: hidden; overflow-x: hidden;">
+                      <ul id="score" class="score list-group" style="min-height: 40vh; overflow-y: hidden; overflow-x: hidden;">
                           <li class="list-group-item d-flex justify-content-between align-items-center">Team Grape
                             <i class="fas fa-trophy"></i>
                             <span class="badge badge-primary badge-pill">Time: 12:34</span>
@@ -93,36 +92,38 @@
               <div class="tab-pane fade" id="rank" role="tabpanel">
                   <div>
                       <ul id="rank" class="list-group" style="min-height: 40vh; overflow-y:hidden; overflow-x: hidden;">
-                          <li class="list-group-item d-flex justify-content-between align-items-center">Team 1
-                              <span class="badge badge-primary badge-pill">4 Players</span>
+                          <li class="list-group-item d-flex justify-content-between align-items-center">1
+                              <div class="">
+
+                              </div> <span class="badge badge-primary badge-pill">5</span>
                               <div>
                                   <i class="fas fa-lg fa-check mr-2 green"></i>
                                   <i class="fas  fa-lg fa-times red"></i>
                               </div>
                           </li>
-                          <li class="list-group-item d-flex justify-content-between align-items-center">Team 2
-                              <span class="badge badge-primary badge-pill">3 Players</span>
+                          <li class="list-group-item d-flex justify-content-between align-items-center">Player 2
+                              <span class="badge badge-primary badge-pill">4 wins</span>
                               <div>
                                   <i class="fas fa-lg fa-check mr-2 green"></i>
                                   <i class="fas  fa-lg fa-times red"></i>
                               </div>
                           </li>
-                          <li class="list-group-item d-flex justify-content-between align-items-center">Team 3
-                              <span class="badge badge-primary badge-pill">2 Players</span>
+                          <li class="list-group-item d-flex justify-content-between align-items-center">Player 3
+                              <span class="badge badge-primary badge-pill">3 wins</span>
                               <div>
                                   <i class="fas fa-lg fa-check mr-2 green"></i>
                                   <i class="fas  fa-lg fa-times red"></i>
                               </div>
                           </li>
-                          <li class="list-group-item d-flex justify-content-between align-items-center">Team 4
-                              <span class="badge badge-primary badge-pill">4 Players</span>
+                          <li class="list-group-item d-flex justify-content-between align-items-center">Player 4
+                              <span class="badge badge-primary badge-pill">2 wins</span>
                               <div>
                                   <i class="fas fa-lg fa-check mr-2 green"></i>
                                   <i class="fas  fa-lg fa-times red"></i>
                               </div>
                           </li>
-                          <li class="list-group-item d-flex justify-content-between align-items-center">Team 5
-                              <span class="badge badge-primary badge-pill">4 Players</span>
+                          <li class="list-group-item d-flex justify-content-between align-items-center">Player 5
+                              <span class="badge badge-primary badge-pill">1 win</span>
                               <div>
                                   <i class="fas fa-lg fa-check mr-2 green" Alt="Accept"></i>
                                   <i class="fas  fa-lg fa-times red" Alt="Red"></i>
@@ -135,30 +136,6 @@
           </div>
       </div>
     </section>
-	
-	<!-- Modal help -->
-<div class="modal fade" id="rulesAbout" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="rulesAbout">About &amp; Rules</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <h3>The Amazing Game</h3>
-        <h4>About</h4>
-        <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque arcu, auctor at gravida eget, semper sit amet ipsum. Curabitur at odio vel orci pellentesque tincidunt. Nam eget porttitor erat. Nam eu turpis ac velit tincidunt dictum ut dignissim nunc. Quisque ac faucibus est. Phasellus posuere est ac mollis hendrerit. Etiam nisi dolor, sollicitudin id auctor sit amet, tempor sit amet erat. Aliquam pretium mauris faucibus, gravida libero in, euismod mauris. Ut pellentesque, ex id tincidunt consequat, dui magna commodo dolor, vitae pretium purus dui sit amet enim. Mauris dapibus, ligula eget pulvinar iaculis, mi nunc venenatis ante, a finibus velit massa non lectus. Phasellus hendrerit, neque eu scelerisque dignissim, leo mauris molestie ipsum, non feugiat neque tortor tincidunt mi. Praesent maximus orci eget ex sollicitudin ultricies. Curabitur pretium interdum sapien hendrerit cursus. Pellentesque rutrum, est vel mattis pellentesque, massa metus ultricies turpis, a sodales nisl dolor vitae odio. Pellentesque molestie convallis quam, non accumsan dolor. Vestibulum id tempus mauris.</p>
-        <h4>Rules</h4>
-        <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque arcu, auctor at gravida eget, semper sit amet ipsum. Curabitur at odio vel orci pellentesque tincidunt. Nam eget porttitor erat. Nam eu turpis ac velit tincidunt dictum ut dignissim nunc. Quisque ac faucibus est. Phasellus posuere est ac mollis hendrerit. Etiam nisi dolor, sollicitudin id auctor sit amet, tempor sit amet erat. Aliquam pretium mauris faucibus, gravida libero in, euismod mauris. Ut pellentesque, ex id tincidunt consequat, dui magna commodo dolor, vitae pretium purus dui sit amet enim. Mauris dapibus, ligula eget pulvinar iaculis, mi nunc venenatis ante, a finibus velit massa non lectus. Phasellus hendrerit, neque eu scelerisque dignissim, leo mauris molestie ipsum, non feugiat neque tortor tincidunt mi. Praesent maximus orci eget ex sollicitudin ultricies. Curabitur pretium interdum sapien hendrerit cursus. Pellentesque rutrum, est vel mattis pellentesque, massa metus ultricies turpis, a sodales nisl dolor vitae odio. Pellentesque molestie convallis quam, non accumsan dolor. Vestibulum id tempus mauris.</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-  </div>
-</div>
 
 
 
