--- a/joinplayer.html
+++ b/joinplayer.html
@@ -69,7 +69,7 @@ body {
               <a class="nav-link" data-toggle="tab" href="#request" role="tab">Requests</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" data-toggle="tab" href="#request" role="tab">Invite a team</a>
+              <a class="nav-link" data-toggle="tab" href="#invite" role="tab">Invite a team</a>
           </li>
       </ul>
       <div class="tab-content">
@@ -132,6 +132,44 @@ body {
               </div>
               <br>
           </div>
+
+          <div class="tab-pane fade" id="invite" role="tabpanel">
+                <div>
+                    <ul id="yourteam" class="list-group" style="min-height: 40vh; overflow-y:hidden; overflow-x: hidden;">
+                        <li class="list-group-item d-flex justify-content-between align-items-center">Team 1
+                            <span class="badge badge-primary badge-pill">4 Players</span>
+                            <div>
+                                 <button type="button" class="btn btn-success btn-sm">Invite</button>
+                            </div>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">Team 2
+                            <span class="badge badge-primary badge-pill">3 Players</span>
+                            <div>
+                                 <button type="button" class="btn btn-success btn-sm">Invite</button>
+                            </div>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">Team 3
+                            <span class="badge badge-primary badge-pill">2 Players</span>
+                            <div>
+                                 <button type="button" class="btn btn-success btn-sm">Invite</button>
+                            </div>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">Team 4
+                            <span class="badge badge-primary badge-pill">4 Players</span>
+                            <div>
+                                 <button type="button" class="btn btn-success btn-sm">Invite</button>
+                            </div>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">Team 5
+                            <span class="badge badge-primary badge-pill">4 Players</span>
+                            <div>
+                                 <button type="button" class="btn btn-success btn-sm">Invite</button>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <br>
+            </div>
       </div>
   </div>
 </section>
