--- a/leaderboard.html
+++ b/leaderboard.html
@@ -25,10 +25,10 @@
       <span></span>
 
       <ul id="menu">
-        <a href="#">
+        <a href="leaderboard.html">
           <li>Leaderboard</li>
         </a>
-        <a href="#">
+        <a href="joinplayer.html">
           <li>Join a Team</li>
         </a>
         <a href="#">
@@ -43,7 +43,6 @@
       </ul>
     </div>
   </nav>
-  <button type="button" class="btn btn-danger mx-auto d-block float-right pull-right"><a href="startpage.html">Quit Game</a></button>
 
 
   <section class="d-flex align-items-center" style="height: 100vh;">
@@ -137,6 +136,28 @@
       </div>
     </div>
   </section>
+  <div class="modal fade" id="rulesAbout" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="rulesAbout">About &amp; Rules</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <h3>The Amazing Game</h3>
+        <h4>About</h4>
+        <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque arcu, auctor at gravida eget, semper sit amet ipsum. Curabitur at odio vel orci pellentesque tincidunt. Nam eget porttitor erat. Nam eu turpis ac velit tincidunt dictum ut dignissim nunc. Quisque ac faucibus est. Phasellus posuere est ac mollis hendrerit. Etiam nisi dolor, sollicitudin id auctor sit amet, tempor sit amet erat. Aliquam pretium mauris faucibus, gravida libero in, euismod mauris. Ut pellentesque, ex id tincidunt consequat, dui magna commodo dolor, vitae pretium purus dui sit amet enim. Mauris dapibus, ligula eget pulvinar iaculis, mi nunc venenatis ante, a finibus velit massa non lectus. Phasellus hendrerit, neque eu scelerisque dignissim, leo mauris molestie ipsum, non feugiat neque tortor tincidunt mi. Praesent maximus orci eget ex sollicitudin ultricies. Curabitur pretium interdum sapien hendrerit cursus. Pellentesque rutrum, est vel mattis pellentesque, massa metus ultricies turpis, a sodales nisl dolor vitae odio. Pellentesque molestie convallis quam, non accumsan dolor. Vestibulum id tempus mauris.</p>
+        <h4>Rules</h4>
+        <p class="text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque arcu, auctor at gravida eget, semper sit amet ipsum. Curabitur at odio vel orci pellentesque tincidunt. Nam eget porttitor erat. Nam eu turpis ac velit tincidunt dictum ut dignissim nunc. Quisque ac faucibus est. Phasellus posuere est ac mollis hendrerit. Etiam nisi dolor, sollicitudin id auctor sit amet, tempor sit amet erat. Aliquam pretium mauris faucibus, gravida libero in, euismod mauris. Ut pellentesque, ex id tincidunt consequat, dui magna commodo dolor, vitae pretium purus dui sit amet enim. Mauris dapibus, ligula eget pulvinar iaculis, mi nunc venenatis ante, a finibus velit massa non lectus. Phasellus hendrerit, neque eu scelerisque dignissim, leo mauris molestie ipsum, non feugiat neque tortor tincidunt mi. Praesent maximus orci eget ex sollicitudin ultricies. Curabitur pretium interdum sapien hendrerit cursus. Pellentesque rutrum, est vel mattis pellentesque, massa metus ultricies turpis, a sodales nisl dolor vitae odio. Pellentesque molestie convallis quam, non accumsan dolor. Vestibulum id tempus mauris.</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 
